--- a/Skill-Share/src/main/resources/application.properties
+++ b/Skill-Share/src/main/resources/application.properties
@@ -10,6 +10,11 @@ server.port=8080
 spring.thymeleaf.cache=false
 
 # ----------------------------
+# Session Management
+# ----------------------------
+server.servlet.session.timeout=20m
+
+# ----------------------------
 # Logging (optional, helpful)
 # ----------------------------
 logging.level.org.springframework=INFO
